# issue-tracker-tools

./: .gitignore  LICENCE  README.md  cfd  cfd-animate  git-tickets  it  jira  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
example/: issuetracker.yml  jiraconfig.yml  projectconfig.yml
jiralib/: config.py  config_test.py  cumulative_flow_graph.py  jira_builder.py  jira_ext.py  jira_issue.py  jira_issue_test.py  report_epics.py  report_issue_detail.py  report_issue_summary.py  report_issue_summary_test.py  report_progress.py  report_progress_test.py  report_release_notes.py  report_resolved.py  report_resolved_test.py  report_working.py
jiralib/tests/: test_config.py  test_flow_data.py  test_jira_ext.py  test_jira_issue.py  test_report_issue_summary.py  test_report_progress.py  test_report_resolved.py
lib/: config.py
lib/cfd/: cfd_db.py  cumulative_flow_graph.py  flow_data.py
lib/cfd/tests/: test_cfd_db.py  test_flow_data.py
lib/domain/: epic.py  issue.py  issue_counts.py  project.py
lib/domain/tests/: test_issue_counts.py  test_project.py
lib/issues/: issue.py  issue_counts.py  issue_provider.py  project.py
lib/issues/tests/: test_issue_counts.py  test_project.py
lib/jira/: jira_ext.py
lib/jira/tests/: test_jira_ext.py
lib/reports/: report_epics.py  report_issue_detail.py  report_issue_summary.py  report_progress.py  report_project.py  report_release_notes.py  report_resolved.py  report_working.py
lib/reports/tests/: test_report_issue_summary.py  test_report_progress.py  test_report_resolved.py
lib/tests/: test_config.py
scripts/: lint.sh  test.sh  watch.sh
src/ittools/: config.py
src/ittools/cfd/: cfd_db.py  cumulative_flow_graph.py  flow_data.py
src/ittools/cfd/tests/: test_cfd_db.py  test_flow_data.py
src/ittools/cli/: cfd.py  it.py
src/ittools/domain/: dateutils.py  epic.py  issue.py  issue_provider.py  project.py
src/ittools/jira/: jira_ext.py
src/ittools/reports/: report_epics.py  report_in_progress.py  report_issue_detail.py  report_issue_summary.py  report_project.py  report_release_notes.py  report_resolved.py  report_working.py
src/ittools/tests/: test_config.py
(+9 files in other folders)
