[metadata]
name = issue-tracker-tools
version = 0.9.0
author = Joe Schmetzer
author_email = joe@exubero.com
license = Apache 2.0
url = https://github.com/tumbarumba/jiratools

[options]
versioning=dev
python_requires = ~=3.10
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    click
    flake8
    jira
    jsonpickle
    matplotlib
    numpy
    pandas
    pytest
    python-dateutil
    python-dotenv
    pytz
    PyYAML
    yq

[options.packages.find]
where =
    src
include =
    ittools*
exclude =
    tests*

[options.entry_points]
console_scripts =
    it = ittools.cli.it:issue_tracker
    cfd = ittools.cli.cfd:cfd
